geen documentclass en begin doc zodat niet gecompiled wordt?

--- a/lambregs_origineel/oefeningen/Oef1D/main.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/main.tex
@@ -1,38 +1,42 @@
-\documentclass[12pt,a4paper]{article}
-
-\usepackage{import}
-\usepackage{./config/preambule}
+% \documentclass als comment, zodat niet automatisch gepubliceerd wordt ...?
 
 
 
+% \documentclass[12pt,a4paper]{article}
 
-%\pdfminorversion=4
-%\pdfobjcompresslevel=3
-%\pdfcompresslevel=9
-%
-%\usepackage{lmodern} % Ensure scalable fonts
-%\usepackage[T1]{fontenc} % Use Type 1 fonts
-%\usepackage{textcomp} % Additional symbols
+% \usepackage{import}
+% \usepackage{./config/preambule}
 
 
 
 
-%\excludecomment{oplossing}
+% %\pdfminorversion=4
+% %\pdfobjcompresslevel=3
+% %\pdfcompresslevel=9
+% %
+% %\usepackage{lmodern} % Ensure scalable fonts
+% %\usepackage[T1]{fontenc} % Use Type 1 fonts
+% %\usepackage{textcomp} % Additional symbols
 
 
-\begin{document}
-%\pagestyle{empty}
-
-%\tableofcontents
 
 
-%\import{./files/}{voorbeeldoefening}
-%\import{./files/}{toets}
-%\vfill
+% %\excludecomment{oplossing}
 
 
-%\newpage
-%
+% \begin{document}
+% %\pagestyle{empty}
+
+% %\tableofcontents
+
+
+% %\import{./files/}{voorbeeldoefening}
+% %\import{./files/}{toets}
+% %\vfill
+
+
+% %\newpage
+% %
 \section{Eendimensionale bewegingen}
 \import{./files/}{vragen_1D}
 
@@ -44,6 +48,6 @@
 
 
 
-\end{document}
+% \end{document}
 
 
