--- a/lambregs_origineel/oefeningen/Oef2D/main.tex
+++ b/lambregs_origineel/oefeningen/Oef2D/main.tex
@@ -1,34 +1,34 @@
-\documentclass[12pt,a4paper]{article}
+% \documentclass[12pt,a4paper]{article}
 
-\usepackage{import}
-\usepackage{./config/preambule}
-
-
-
-
-%\pdfminorversion=4
-%\pdfobjcompresslevel=3
-%\pdfcompresslevel=9
-%
-%\usepackage{lmodern} % Ensure scalable fonts
-%\usepackage[T1]{fontenc} % Use Type 1 fonts
-%\usepackage{textcomp} % Additional symbols
+% \usepackage{import}
+% \usepackage{./config/preambule}
 
 
 
 
-%\excludecomment{oplossing}
+% %\pdfminorversion=4
+% %\pdfobjcompresslevel=3
+% %\pdfcompresslevel=9
+% %
+% %\usepackage{lmodern} % Ensure scalable fonts
+% %\usepackage[T1]{fontenc} % Use Type 1 fonts
+% %\usepackage{textcomp} % Additional symbols
 
 
-\begin{document}
-%\pagestyle{empty}
-
-%\tableofcontents
 
 
-%\import{./files/}{voorbeeldoefening}
-%\import{./files/}{toets}
-%\vfill
+% %\excludecomment{oplossing}
+
+
+% \begin{document}
+% %\pagestyle{empty}
+
+% %\tableofcontents
+
+
+% %\import{./files/}{voorbeeldoefening}
+% %\import{./files/}{toets}
+% %\vfill
 
 
 
@@ -44,6 +44,6 @@
 
 
 
-\end{document}
+% \end{document}
 
 
