--- a/6dejaar/kinematica/knmtc_bgrppn_intro.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_intro.tex
@@ -8,7 +8,7 @@
 	\xmtitle{Inleiding kinematica}{}
     \xmsource\xmuitleg
 
-\textbf{Kinematica} (afkomstig van het Griekse woord $\kappa \iota \nu \epsilon \mu \alpha$ ) is het belangrijke onderdeel van de fysica dat de \textbf{bewegingen van voorwerpen beschrijft} zonder zich af te vragen wat de oorzaak ervan is. 
+\textbf{Kinematica} (afkomstig van het Griekse woord $\kappa \iota \nu \eta \mu \alpha$ ) is het belangrijke onderdeel van de fysica dat de \textbf{bewegingen van voorwerpen beschrijft} zonder zich af te vragen wat de oorzaak ervan is. 
 Dat gaat bijvoorbeeld over vallende appels, rollende knikkers of rijdende auto's, maar ook over de beweging van de maan rond de aarde, de aarde rond de zon, moleculen in water of ook in elkaar grijpende tandwieltjes in een mechanisch uurwerk. 
 
 
