--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_EVB_grafiek_II_1.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_EVB_grafiek_II_1.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../main.tex
 
 
-\item\pt{4}\begin{minipage}[t]{.6\linewidth}
+\pt{4}\begin{minipage}[t]{.6\linewidth}
 	Teken de overeenkomstige $x(t)$- en $a(t)$-grafiek bij de gegeven $v(t)$-grafiek. Ga ervan uit dat $x_0=\SI{0}{m}$.
 \end{minipage}
 \hfill
