--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_EVB_grafiek_II_2.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_EVB_grafiek_II_2.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../main.tex
 
 
-\item\pt{2}De snelheid van een deeltje voldoet aan $v=at$ waarin $a$ constant en negatief is. De plaats van het deeltje wordt voorgesteld door $x$. Aangenomen wordt dat $x=0\rm\,m$ op het ogenblik $t=0\rm\,s$. Welke grafiek geeft het juiste verloop van $x(t)$?
+\pt{2}De snelheid van een deeltje voldoet aan $v=at$ waarin $a$ constant en negatief is. De plaats van het deeltje wordt voorgesteld door $x$. Aangenomen wordt dat $x=0\rm\,m$ op het ogenblik $t=0\rm\,s$. Welke grafiek geeft het juiste verloop van $x(t)$?
 \begin{figure}[h]
 \begin{flushright}
 \import{./img/}{30p38_a.tex}\import{./img/}{30p38_b.tex}
