--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_EVB_grafiek_II_3.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_EVB_grafiek_II_3.tex
@@ -2,7 +2,7 @@
 
 
 
-\item\pt{2}Een lichaam wordt verticaal omhoog geworpen. De referentieas is omhoog gericht. Welke van de volgende $v(t)$-diagrammen geeft dan het juiste verloop van de snelheid weer?
+\pt{2}Een lichaam wordt verticaal omhoog geworpen. De referentieas is omhoog gericht. Welke van de volgende $v(t)$-diagrammen geeft dan het juiste verloop van de snelheid weer?
 \begin{figure}[h]
 \begin{flushright}
 \includegraphics[width=0.93\textwidth]{vw}
