--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_EVRB_II_2.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_EVRB_II_2.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../main.tex
 
 
-\item[\SI{80}{\percent} (b)] Een trein rijdt tegen een snelheid van \SI{72}{km/h} en remt met een versnelling waarvan de grootte \SI{1,0}{m/s^2} bedraagt. Na hoeveel tijd komt de trein tot stilstand en welke afstand wordt er tijdens dit afremmen afgelegd?
+[\SI{80}{\percent} (b)] Een trein rijdt tegen een snelheid van \SI{72}{km/h} en remt met een versnelling waarvan de grootte \SI{1,0}{m/s^2} bedraagt. Na hoeveel tijd komt de trein tot stilstand en welke afstand wordt er tijdens dit afremmen afgelegd?
 
 \begin{oplossing}
     % \item[gegeven]$v_0=\SI{20}{m/s}\newline $a=\SI{-1,0}{m/s^2}
