--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_EVRB_I_1.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_EVRB_I_1.tex
@@ -3,7 +3,7 @@
 
 
 
-\item Een auto vertrekt vanuit rust en bereikt na \SI{3,0}{km} een snelheid van \SI{450}{km/h} We onderstellen de versnelling constant en de baan recht. Bereken de versnelling en de tijd, nodig om die \SI{3,0}{km} af te leggen.
+ Een auto vertrekt vanuit rust en bereikt na \SI{3,0}{km} een snelheid van \SI{450}{km/h} We onderstellen de versnelling constant en de baan recht. Bereken de versnelling en de tijd, nodig om die \SI{3,0}{km} af te leggen.
 \begin{oplossing}
     % \item[gegeven]$x=3000\rm\,m$\newline $v=125\rm\,m/s$
     % \item[gevraagd]$a$, $t$
