--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_EVRB_I_3.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_EVRB_I_3.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../main.tex
 
 
-\item\pt{4}Een massa vertrekt vanuit rust om een EVB uit te voeren. Als haar beginpositie \SI{0}{m} is, welke van de volgende betrekkingen is dan juist? Toon aan
+\pt{4}Een massa vertrekt vanuit rust om een EVB uit te voeren. Als haar beginpositie \SI{0}{m} is, welke van de volgende betrekkingen is dan juist? Toon aan
 \newline
 \newline
 \begin{tabularx}{\textwidth}{XXXX}
