--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_theorie_II_1.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_theorie_II_1.tex
@@ -2,7 +2,7 @@
 
 
 
-\item Beargumenteer het gebruik van het model van een eenparig versnelde beweging (EVB) voor de vrije beweging van een wagentje op een helling. Denk daarbij aan een proefneming die we in de klas deden. De notie kracht moet je hier even buiten beschouwing laten.
+ Beargumenteer het gebruik van het model van een eenparig versnelde beweging (EVB) voor de vrije beweging van een wagentje op een helling. Denk daarbij aan een proefneming die we in de klas deden. De notie kracht moet je hier even buiten beschouwing laten.
 
 \begin{oplossing}
 
