--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_theorie_II_2.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_theorie_II_2.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../main.tex
 
 
-\item\pt{4}In de figuur zie je zes bewegingen van een bal die van links naar rechts beweegt. De pijlen geven de positieve richting oftewel de $x$-as aan. Elke cirkel stelt de positie van de bal voor op opeenvolgende tijdstippen. De tijdsintervallen tussen die opeenvolgende tijdstippen zijn gelijk.
+\pt{4}In de figuur zie je zes bewegingen van een bal die van links naar rechts beweegt. De pijlen geven de positieve richting oftewel de $x$-as aan. Elke cirkel stelt de positie van de bal voor op opeenvolgende tijdstippen. De tijdsintervallen tussen die opeenvolgende tijdstippen zijn gelijk.
 \begin{figure}[hbt]
 	\begin{flushright}
 	\includegraphics[width=.93\textwidth]{hb_natuurkundedidactiek_34}
