--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_III_1.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_III_1.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../main.tex
 
 
-\item\pt{10}Een verticaal vallende steen legt in de laatste seconde, voor hij de grond bereikt, \SI{100}{m} af. Men veronderstelt dat hij vanuit rust vertrok.
+\pt{10}Een verticaal vallende steen legt in de laatste seconde, voor hij de grond bereikt, \SI{100}{m} af. Men veronderstelt dat hij vanuit rust vertrok.
 \begin{enumerate}
 \item Bepaal de snelheid op het ogenblik dat hij de grond bereikt.
 \item Bepaal de hoogte vanwaar de steen viel en de tijd die hij daarvoor nodig had.
