--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_III_4.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_III_4.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../main.tex
 
 
-\item\pt{10}Een student gooit een sleutelbos verticaal omhoog naar een medebewoonster in een raam \SI{4,00}{m} hoger. De sleutels worden \SI{1,50}{s} later opgevangen.
+\pt{10}Een student gooit een sleutelbos verticaal omhoog naar een medebewoonster in een raam \SI{4,00}{m} hoger. De sleutels worden \SI{1,50}{s} later opgevangen.
 \begin{enumerate}
 \item Wat was de snelheid waarmee de sleutels omhoog werden gegooid?
 \item Welke snelheid had de sleutelbos vlak voordat hij werd opgevangen?
