--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_III_5.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_III_5.tex
@@ -2,7 +2,7 @@
 
 
 
-\item Een voorwerp wordt verticaal omhoog geworpen en bereikt na een tijd $t$ een hoogte $h$. Toon aan dat de maximale hoogte $h_{\text{max}}$ die het voorwerp bereikt, wordt gegeven door:
+ Een voorwerp wordt verticaal omhoog geworpen en bereikt na een tijd $t$ een hoogte $h$. Toon aan dat de maximale hoogte $h_{\text{max}}$ die het voorwerp bereikt, wordt gegeven door:
 \begin{eqnarray*}
 h_{\text{max}}&=&\frac{(gt^2+2h)^2}{8gt^2}.
 \end{eqnarray*}
