--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_II_1.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_II_1.tex
@@ -2,7 +2,7 @@
 
 
 
-\item\pt{10}Een parachutist in vrije val bereikt een uiteindelijke valsnelheid van \SI{50}{m/s}. Neem aan
+\pt{10}Een parachutist in vrije val bereikt een uiteindelijke valsnelheid van \SI{50}{m/s}. Neem aan
 dat een geopende parachute voor een constante vertraging van \SI{30}{m/s^2} zorgt.\footnote{Dit is een heel ruwe benadering. In feite hangt de vertraging door de parachute namelijk af van de snelheid en is die afhankelijkheid bovendien voor grote snelheden sterker dan voor kleine.} Wil er bij het neerkomen geen kans op letsel bestaan, dan mag de landingssnelheid niet groter dan \SI{5,0}{m/s} zijn. 
 
 Wat is de minimumhoogte voor het openen van de parachute?
