--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_II_2.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_II_2.tex
@@ -1,4 +1,4 @@
-\item Iemand laat een meloen vallen vanop een hoogte van \SI{20}{m}. Op hetzelfde moment schiet je een pijl verticaal omhoog vanop de grond. De pijl treft de meloen na \SI{1,0}{s}. 
+ Iemand laat een meloen vallen vanop een hoogte van \SI{20}{m}. Op hetzelfde moment schiet je een pijl verticaal omhoog vanop de grond. De pijl treft de meloen na \SI{1,0}{s}. 
 \begin{enumerate}
 \item Geef in \'e\'en assenstelsel een verzorgde schets van de grafiek van de plaats in functie van de tijd voor beide objecten.
 \item Met welke snelheid heb je de pijl afgeschoten? 
