--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_II_4.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_II_4.tex
@@ -2,7 +2,7 @@
 
 
 
-\item Wanneer de pelikaan naar vis duikt, trekt hij zijn vleugels in om als een steen loodrecht naar beneden te vallen. 
+ Wanneer de pelikaan naar vis duikt, trekt hij zijn vleugels in om als een steen loodrecht naar beneden te vallen. 
 
 Stel een pelikaan duikt vanaf \SI{25}{m} hoogte en verandert onderweg dus niet meer van koers. Als het een vis \SI{0,15}{s} kost om te vluchten, wat is dan de hoogte waarop de vis de pelikaan minstens moet opmerken, wil de vis nog kans maken te ontsnappen? 
 
