--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_II_5.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_II_5.tex
@@ -2,7 +2,7 @@
 
 
 
-\item Op de maan is de versnelling van de zwaartekracht slechts een zesde van die op de aarde. Als een voorwerp op de maan verticaal omhoog wordt gegooid, hoeveel maal hoger komt het dan dan een voorwerp dat met dezelfde beginsnelheid vanaf de aarde wordt opgeworpen?
+ Op de maan is de versnelling van de zwaartekracht slechts een zesde van die op de aarde. Als een voorwerp op de maan verticaal omhoog wordt gegooid, hoeveel maal hoger komt het dan dan een voorwerp dat met dezelfde beginsnelheid vanaf de aarde wordt opgeworpen?
 
 \begin{oplossing}
 De tijd die het voorwerp nodig heeft om tot zijn hoogste punt ($v=0$) te geraken, is $t=-\frac{v_0}{a}$ waarbij $a$ de negatieve versnelling op aarde of op de maan is. Met deze tijd en de gemiddelde snelheid gedurende de opwaartse beweging, kunnen we de bereikte hoogte uitdrukken in functie van de beginsnelheid $v_0$:
