--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_I_1.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_I_1.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../main.tex
 
 
-\item\pt{10}Uit een punt op \SI{28,0}{m} boven de grond wordt een bal verticaal omhoog geworpen met een snelheid van \SI{12}{m/s}. Bepaal
+\pt{10}Uit een punt op \SI{28,0}{m} boven de grond wordt een bal verticaal omhoog geworpen met een snelheid van \SI{12}{m/s}. Bepaal
 \begin{enumerate}
 \item de door het lichaam bereikte hoogte boven de grond;
 \begin{oplossing}
