--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_I_2.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_I_2.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../main.tex
 
 % 3 p. 92
-\item[\SI{80}{\percent} (b)] Een pijl wordt verticaal van de grond omhooggeschoten en bereikt na \SI{2,8}{s} het hoogste punt. Bepaal deze hoogte.
+[\SI{80}{\percent} (b)] Een pijl wordt verticaal van de grond omhooggeschoten en bereikt na \SI{2,8}{s} het hoogste punt. Bepaal deze hoogte.
 \begin{oplossing}
 \item[Gegeven]\SI{2,8}{s}
 \item[Gevraagd]$v_0$, $x_{max}$
