--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_I_3.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_valbeweging_I_3.tex
@@ -2,7 +2,7 @@
 
 
 
-\item Aan de rand van een afgrond laat men een steen vallen. Op hetzelfde ogenblik werpt men een steen op. Zou het kunnen dat, als de afgrond diep genoeg is, beide stenen elkaar nog ontmoeten?
+ Aan de rand van een afgrond laat men een steen vallen. Op hetzelfde ogenblik werpt men een steen op. Zou het kunnen dat, als de afgrond diep genoeg is, beide stenen elkaar nog ontmoeten?
 \begin{oplossing}
 \newline
 \newline
