--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_wis_II_1.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_wis_II_1.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../main.tex
 
 
-\item\pt{4}Laat zien dat voor een EVB waarvoor $x_0=0$ de volgende formule geldt:
+\pt{4}Laat zien dat voor een EVB waarvoor $x_0=0$ de volgende formule geldt:
 \begin{eqnarray*}
 v^2=v_0^2+2ax
 %v^2=v_0^2+2a(x-x_0)
