--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_wis_II_2.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_wis_II_2.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../main.tex
 
 
-\item\pt{2}De snelheid van een lichaam dat vanuit rust vrij valt, bedraagt na een valafstand $x$:
+\pt{2}De snelheid van een lichaam dat vanuit rust vrij valt, bedraagt na een valafstand $x$:
 %De snelheid van een lichaam dat vrij valt vanuit rust, bedraagt na een valafstand $x$ (licht je antwoord toe):
 %\newline
 %\newline
