--- a/lambregs_origineel/oefeningen/Oef1D/lib/FV_T1_18p40.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/FV_T1_18p40.tex
@@ -1,4 +1,4 @@
-\item Welke vectorvoorstelling stelt een EVRB voor die vertraagt naar de oorsprong van de $x$-as toe? Beargumenteer kort je keuze.
+ Welke vectorvoorstelling stelt een EVRB voor die vertraagt naar de oorsprong van de $x$-as toe? Beargumenteer kort je keuze.
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.8\textwidth]{18p40}
