--- a/lambregs_origineel/oefeningen/Oef1D/lib/FV_T1_7p47.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/FV_T1_7p47.tex
@@ -1,1 +1,1 @@
-\item Een trein met veel rijtuigen heeft een snelheid van \SI{100}{km/h} en komt over een afstand van \SI{520}{m} tot stilstand. Hoe groot is zijn versnelling?
+ Een trein met veel rijtuigen heeft een snelheid van \SI{100}{km/h} en komt over een afstand van \SI{520}{m} tot stilstand. Hoe groot is zijn versnelling?
