--- a/lambregs_origineel/oefeningen/Oef1D/main.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/main.tex
@@ -2,32 +2,32 @@
 
 
 
-% \documentclass[12pt,a4paper]{article}
+\documentclass[12pt,a4paper]{article}
 
-% \usepackage{import}
-% \usepackage{./config/preambule}
-
-
-
-
-% %\pdfminorversion=4
-% %\pdfobjcompresslevel=3
-% %\pdfcompresslevel=9
-% %
-% %\usepackage{lmodern} % Ensure scalable fonts
-% %\usepackage[T1]{fontenc} % Use Type 1 fonts
-% %\usepackage{textcomp} % Additional symbols
+\usepackage{import}
+\usepackage{./config/preambule}
 
 
 
 
-% %\excludecomment{oplossing}
+%\pdfminorversion=4
+%\pdfobjcompresslevel=3
+%\pdfcompresslevel=9
+%
+%\usepackage{lmodern} % Ensure scalable fonts
+%\usepackage[T1]{fontenc} % Use Type 1 fonts
+%\usepackage{textcomp} % Additional symbols
 
 
-% \begin{document}
-% %\pagestyle{empty}
 
-% %\tableofcontents
+
+%\excludecomment{oplossing}
+
+
+\begin{document}
+%\pagestyle{empty}
+
+%\tableofcontents
 
 
 % %\import{./files/}{voorbeeldoefening}
@@ -48,6 +48,6 @@
 
 
 
-% \end{document}
+\end{document}
 
 
