--- a/preamble.tex
+++ b/preamble.tex
@@ -37,7 +37,7 @@
 
 \usepackage{cancel}
 
-
+\usepackage{tabularx}
 % Nuttig als ook interactieve beamer slides worden voorzien:
 \providecommand{\p}{} % default nothing ; potentially usefull for slides: redefine as \pause
 %providecommand{\p}{\pause}
@@ -1265,3 +1265,9 @@ Dit materiaal wordt ontwikkeld als open-source project via \href{https://natuurk
 }
 {}   % Niets in de in PDF ...
 }
+
+
+
+% TEMP :
+\usepackage{totcount}
+\newtotcounter{totaantal}
