--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_EVRB_II_3.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_EVRB_II_3.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../main.tex
 
 
-\item[\SI{80}{\percent} (b)] Een vliegtuig start vanuit rust en versnelt met een constante versnelling langs de grond alvorens op te stijgen. Het legt \SI{600}{m} af in \SI{12}{s}. Bepaal de versnelling, de snelheid na \SI{12}{s} en de afstand afgelegd gedurende de twaalfde seconde.
+[\SI{80}{\percent} (b)] Een vliegtuig start vanuit rust en versnelt met een constante versnelling langs de grond alvorens op te stijgen. Het legt \SI{600}{m} af in \SI{12}{s}. Bepaal de versnelling, de snelheid na \SI{12}{s} en de afstand afgelegd gedurende de twaalfde seconde.
 
 \begin{oplossing}
 	$a=\frac{2x}{t^2}=\SI{8,33}{m/s^2}$,
