--- a/lambregs_origineel/oefeningen/Oef1D/lib/1d_theorie_I_1.tex
+++ b/lambregs_origineel/oefeningen/Oef1D/lib/1d_theorie_I_1.tex
@@ -1,4 +1,4 @@
 % !TEX root = ../main.tex
 
 
-\item\pt{4}Kan de snelheid van een voorwerp gelijk zijn aan nul, terwijl de versnelling verschillend is van nul? Motiveer je antwoord.
+\pt{4}Kan de snelheid van een voorwerp gelijk zijn aan nul, terwijl de versnelling verschillend is van nul? Motiveer je antwoord.
