--- a/Oef1D.tex
+++ b/Oef1D.tex
@@ -4,7 +4,7 @@
 
 \usepackage{tabularx}
 
-\newcommand{\pt}[1]{\leavevmode\marginnote[\hfill\textbf{/#1}]{\hfill/#1}\addtocounter{totaantal}{#1}}
+% \newcommand{\pt}[1]{\leavevmode\marginnote[\hfill\textbf{/#1}]{\hfill/#1}\addtocounter{totaantal}{#1}}
 
 
 \addPrintStyle{.}
@@ -22,7 +22,7 @@
 
 % \activitychapter{6dejaar/kinematica/exercises/vragen_1import.tex}
 \activitychapter{6dejaar/kinematica/exercises/vragen_1noimport.tex}
-\activitychapter{6dejaar/kinematica/exercises/vragen_1vraagstukken.tex}
+% \activitychapter{6dejaar/kinematica/exercises/vragen_1vraagstukken.tex}
 
 
 
