--- a/6dejaar/kinematica/knmtc_bgrppn_positie.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_positie.tex
@@ -100,6 +100,8 @@ $\qquad$   % hack
 
 % ik zou durven opteren voor onderstaande figuur, dan heb je bewegend voorwerp naast de grafiek staan, handig voor volgende situaties van snelheid en versnelling.
 
+In onderstaande figuur zie je voor een bepaalde 1D beweging ook de begin- en eindplaatsvectoren met hun plaatscoördinaten die dan in een grafiek als functie van de tijd wordt weergegeven.
+
 \begin{image}
 \includegraphics[width=0.8\textwidth]{positiemetgrafiek}
 
@@ -107,7 +109,7 @@ $\qquad$   % hack
 \captionof{figure}{Links het verplaatsend voorwerp met begin- en eindpositie. Rechts de grafiek van \(x(t)\).}
 
 
-De \textbf{verplaatsing} tussen $t_1$ en $t_2$ is verschil in positie tussen de twee tijdstippen $t_1$ en $t_2$, genoteerd met een $\Delta$\(\vec{r}\) (Delta, een Griekse hoofdletter D  van het Engelse 'displacement' of het Franse 'déplacement').
+De \textbf{verplaatsing} tussen $t_1$ en $t_2$ is het verschil in positie tussen de twee tijdstippen $t_1$ en $t_2$, genoteerd met een $\Delta$\(\vec{r}\) (Delta, een Griekse hoofdletter D  van het Engelse 'displacement' of het Franse 'déplacement').
 
 \begin{definition}
 De \textbf{verplaatsing} \(\Delta \vec{r}\) is het verschil tussen twee posities:
@@ -144,7 +146,7 @@ In figuur 1 is de verplaatsing van de auto tussen de tijdstippen $t_0$ en $t_1$ 
 %%%\newline
 Let op, de verplaatsing hoeft niet noodzakelijk gelijk te zijn aan de \emph{afgelegde weg} tussen de twee bijbehorende tijdstippen. Als je een rondje hebt gelopen op de atletiekpiste en terug aan start staat is je (netto) verplaatsing nul, maar heb je wel degelijk afstand afgelegd.
 
-Samengevat:
+Samengevat voor ééndimensionale bewegingen:
 
 \begin{image}
 \includegraphics[width=0.8\textwidth]{positieverplaatsing1D}
@@ -163,6 +165,15 @@ Voor tweedimensionale bewegingen worden de begrippen positie, verplaatsing en af
 
 \end{image}
 
+Wanneer een voorwerp beweegt, doorloopt het meerdere posities. De verbindingslijn van al deze gepasseerde posities, noemt men de \textbf{baan} van de beweging. 
+Een ééndimensionale beweging heeft een rechte baan. Een tweedimensionale is doorgaans krom en kan meerdere vormen hebben zoals cirkelvormig, paraboolvormig, ellipsvormig,...
+Soms is men geïnteresseerd in een \textbf{baanvergelijking} waarin men de afhankelijkheid tussen x en y wiskundig neerschrijft.
+Indien de functies \(x(t)\) en \(y(t)\) gekend zijn, kan soms een (expliciete) baanvergelijking bekomen worden door één voorschrift uit te werken naar \(t\) en dit vervolgens te substitueren in de andere vergelijking.
+
+\begin{image}
+\includegraphics[width=0.8\textwidth]{vbBaanvergelijking}
+
+\end{image}
 	
 \end{document}
 
