--- a/6dejaar/kinematica/knmtc_bgrppn_snelheid.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_snelheid.tex
@@ -9,13 +9,15 @@
     \xmsource\xmuitleg
 
 Een voorwerp heeft snelheid als het beweegt, er is een verandering van de positie in de tijd.
-De snelheidsvector grijpt altijd aan op het voorwerp en wijst in de zin van de ogenblikkelijke beweging, rakend aan de baan dus.
-In animaties lijkt het alsof de snelheidsvector aan de positievector "trekt". Bezie hiervoor animaties te vinden op https://www.hansbekaert.be/fysica/new/applets6.html.
+De snelheidsvector grijpt aan op het bewegend voorwerp en wijst in de zin van de ogenblikkelijke beweging, dat is rakend aan de baan dat het voorwerp maakt. % bewijs hiervoor van Bart kan toegevoegd worden
+In animaties lijkt het alsof de snelheidsvector aan de positievector 'trekt'. Bezie hiervoor animaties te vinden op https://www.hansbekaert.be/fysica/new/applets6.html.
 
 
-\subsection*{Gemiddelde snelheid bij ééndimensionale bewegingen}
+\subsection*{Snelheid bij ééndimensionale bewegingen}
 
 % gemiddelde snelheid als je een rondje loopt is nu nul; dat moet miss benoemd worden 
+
+Als een voorwerp op een rechte lijn beweegt (1D), dan valt de beweegrichting en dus ook die van de snelheidsvector samen met de richting van die lijn. 
 
 De tijd nodig voor een bepaalde verplaatsing geeft aanleiding tot de \textit{gemiddelde snelheid}. 
 
@@ -99,6 +101,15 @@ Hieronder staat opnieuw de plaatsfunctie \(x(t)\) van het autotje. Bepaal enkel 
 	\captionof{figure}{Verschillende posities en de grafiek van de plaatsfunctie}
 	
 \end{exercise}
+
+\subsection*{Snelheid bij tweedimensionale bewegingen}
+
+Bij voorwerpen die in twee dimensies bewegen, splitst men de beweging doorgaans op in loodrechte x- en y-componenten. Daarmee kan men analoge redeneringen en gelijkaardige formules maken zoals in het 1D geval.
+
+\begin{image}
+\includegraphics[width=0.8\textwidth]{snelheid2D}
+
+\end{image}
 
 	
 \end{document}
