--- a/6dejaar/kinematica/knmtc_bgrppn_versnelling.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_versnelling.tex
@@ -79,6 +79,13 @@ De notatie met een accent $a(t)=v'(t)$ of $a=v'$ wordt op dezelfde manier als in
 \includegraphics{versnellingmetgrafiek}
 \end{image}
 
+In twee dimensies, kan men de versnelling opsplitsen in loodrechte x- en y-componenten. Daarmee kan men analoge redeneringen en gelijkaardige formules maken zoals in het 1D geval.
+
+\begin{image}
+\includegraphics[width=0.8\textwidth]{versnelling2D}
+
+\end{image}
+
 \begin{remark}
 	Het begrip versnelling in de fysica heeft niet dezelfde betekenis als hoe het begrip in de volksmond wordt gebruikt.
 	\begin{description}
