fix; skip files

--- a/6dejaar/kinematica/exercises/vragen_1import.tex
+++ b/6dejaar/kinematica/exercises/vragen_1import.tex
@@ -11,9 +11,8 @@
         \xmtitle{Oefeningen (per bestand)}
 
 
-
 \input{./lib/1d_theorie_II_1} % Model EVB wagentje op een helling
-\input{./lib/FV_T1_18p40} % Meerkeuze Oriëntatie versnelling
+% \input{./lib/FV_T1_18p40} % Meerkeuze Oriëntatie versnelling
 \input{./lib/1d_EVRB_II_1} % Formules EVRB
 \input{./lib/1d_EVRB_I_1}
 \input{./lib/1d_EVRB_I_2} % Bewijs formule gemiddelde snelheid
@@ -22,11 +21,11 @@
 \input{./lib/1d_theorie_I_1}
 \input{./lib/1d_theorie_I_2}
 \input{./lib/1d_theorie_I_3}
-\input{./lib/1d_theorie_II_2} % Ordenen snelheid en versnelling
+% \input{./lib/1d_theorie_II_2} % Ordenen snelheid en versnelling
 \input{./lib/1d_denkvraag_II_1} % Verloop afstandsverschil vallende lichamen
 \input{./lib/1d_EVB_grafiek_II_1}
-\input{./lib/1d_EVB_grafiek_II_2}
-\input{./lib/1d_EVB_grafiek_II_3}
+% \input{./lib/1d_EVB_grafiek_II_2}
+% \input{./lib/1d_EVB_grafiek_II_3}
 \input{./lib/FV_T1_7p47}
 % \input{./lib/1d_EVRB_II_2} % Remmende trein
 % \input{./lib/1d_wis_II_1} % Formule v^2-v_0^2=2ax bewijzen
