--- a/Oef1D.tex
+++ b/Oef1D.tex
@@ -18,9 +18,14 @@
 \begin{document}
 %	\setcounter{tocdepth}{2}
     \xmtitle{Oefeningen 1D}{}  
- 
 
-% \activitychapter{6dejaar/kinematica/exercises/vragen_1import.tex}
+    
+\makeatletter
+\g@addto@macro\input@path{{6dejaar/kinematica/exercises/}}
+\makeatother
+
+
+\activitychapter{6dejaar/kinematica/exercises/vragen_1import.tex}
 \activitychapter{6dejaar/kinematica/exercises/vragen_1noimport.tex}
 % \activitychapter{6dejaar/kinematica/exercises/vragen_1vraagstukken.tex}
 
