--- a/6dejaar/kinematica/exercises/lib/1d_EVB_grafiek_II_3.tex
+++ b/6dejaar/kinematica/exercises/lib/1d_EVB_grafiek_II_3.tex
@@ -7,7 +7,7 @@
 \pt{2}Een lichaam wordt verticaal omhoog geworpen. De referentieas is omhoog gericht. Welke van de volgende $v(t)$-diagrammen geeft dan het juiste verloop van de snelheid weer?
 \begin{figure}[h]
 \begin{flushright}
-\includegraphics[width=0.93\textwidth]{vw}
+%%TODO%% \includegraphics[width=0.93\textwidth]{vw}
 \end{flushright}
 \end{figure}
 
