--- a/6dejaar/kinematica/exercises/vragen_1noimport.tex
+++ b/6dejaar/kinematica/exercises/vragen_1noimport.tex
@@ -46,7 +46,8 @@ x-x_0&=&\left(\frac{v+v_0}{2}\right)(t-t_0)
 
 \begin{exercise} Bewijs dat de remweg van een met constante versnelling remmende auto, evenredig is met het kwadraat van de beginsnelheid.
 \begin{oplossing}
-\item[Bewijs]Bij het tot stilstand komen is de snelheid van de auto nul, zodat de tijd die hij hiervoor nodig heeft als volgt te vinden is:
+Bewijs : 
+Bij het tot stilstand komen is de snelheid van de auto nul, zodat de tijd die hij hiervoor nodig heeft als volgt te vinden is:
 \begin{eqnarray*}
 v&=&0\\
 &\Updownarrow&\\
